com controlador de BD

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="8m=DuEbd;:nDUkp>8JFI0S=ejlgtYe>cy_<eJ=;9O=o[4V`10_pEDUm_vSwXxgVn"
+application.secret="mV^gUxD/xv<WiLGDe7QFKIN4[jyXUlD7ZjERNHU?k8e8Opm79rrU9ZcAA`MX:ptn"
 
 # The application languages
 # ~~~~~
@@ -33,13 +33,22 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
+
+jpa.default=h2PersistenceUnit
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
+db.default.jndiName=DefaultDS
+ebean.default="models.*"
+
+
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
+#jpa.default=h2PersistenceUnit
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
-# db.default.jndiName=DefaultDS
+db.default.jndiName=DefaultDS
 
 # Evolutions
 # ~~~~~
@@ -51,7 +60,7 @@ application.langs="en"
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
