--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,7 +36,7 @@ application.langs="en"
 
 jpa.default=h2PersistenceUnit
 db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
+db.default.url="jdbc:h2:mem:csftravels"
 db.default.jndiName=DefaultDS
 ebean.default="models.*"
 
