--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,7 +53,7 @@ db.default.jndiName=DefaultDS
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
